sfdx-source/force-app/main/default/objects/Account/fields/Accessibilities__c.field-meta.xml
<CustomField>
    <fullName>Accessibilities__c</fullName>
    <label>Accessibilities</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>