sfdx-source/force-app/main/default/objects/Account/fields/Account_Address__c.field-meta.xml
<CustomField>
    <fullName>Account_Address__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-1397: It is used to display Account&apos;s Address in the account details section of the onboarding details.</description>
    <formula>BillingStreet + &apos; &apos; + BillingCity + &apos; &apos; + BillingState + &apos; &apos; + BillingPostalCode + &apos; &apos; + BillingCountry</formula>
    <label>Address</label>
    <type>Text</type>
</CustomField>