sfdx-source/force-app/main/default/objects/Account/fields/Account_ID18__c.field-meta.xml
<CustomField>
    <fullName>Account_ID18__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-96: This Field is used to store the 18 digit SFDC Id for the account.</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account ID18</label>
    <type>Text</type>
</CustomField>