sfdx-source/force-app/main/default/objects/Account/fields/Account_Lifecycle_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Lifecycle_Status__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-90: This field is used to identify the lifecycle status of the account.</description>
    <label>Account Lifecycle Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unvetted</fullName>
                <default>true</default>
                <label>Unvetted</label>
            </value>
            <value>
                <fullName>In Pursuit</fullName>
            </value>
            <value>
                <fullName>Cool-Off</fullName>
            </value>
            <value>
                <fullName>Nurture</fullName>
            </value>
            <value>
                <fullName>Disqualified</fullName>
            </value>
            <value>
                <fullName>Churned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>