sfdx-source/force-app/main/default/objects/Account/fields/Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>LEM-1451: This is a formula field to sync the Lemonade Account Owner name to Figment.</description>
    <formula>Owner.FirstName+&apos; &apos;+ Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <inlineHelpText>Displays the First &amp; Last Name of the Account Owner as Text. Used to sync to Figment.</inlineHelpText>
    <label>Account Owner Full Name</label>
    <type>Text</type>
</CustomField>