sfdx-source/force-app/main/default/objects/Account/fields/Account_Owner_email__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_email__c</fullName>
    <description>LEM-14011 Heroku Bridge would map to Figment field,  Account_Owner_email__c (text field)</description>
    <formula>Owner.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner email</label>
    <type>Text</type>
</CustomField>