sfdx-source/force-app/main/default/objects/Account/fields/Account_Owner_Title__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Title__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>LEM-1451: This is a formula field to sync the Lemonade Account Owner name to Figment.</description>
    <formula>Owner.Title</formula>
    <inlineHelpText>This is a formula field to sync the Lemonade Account Owner name to Figment.</inlineHelpText>
    <label>Account Owner Title</label>
    <type>Text</type>
</CustomField>