sfdx-source/force-app/main/default/objects/Account/fields/Accounts_with_Contracts__c.field-meta.xml
<CustomField>
    <fullName>Accounts_with_Contracts__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15847: It stores the URL for Accounts with Contracts report.</description>
    <formula>HYPERLINK(
  LEFT($Api.Partner_Server_URL_300, FIND(&apos;/services&apos;, $Api.Partner_Server_URL_300)) +
  &apos;/lightning/r/Report/00O8Y000008s0XgUAI/view?queryScope=userFolders&apos;,
  &apos;Link to Report&apos;,
  &apos;_blank&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Accounts with Contracts</label>
    <type>Text</type>
</CustomField>