sfdx-source/force-app/main/default/objects/Account/fields/Activation_Method__c.field-meta.xml
<CustomField>
    <fullName>Activation_Method__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>POS Activation Method
BZAP-19603</description>
    <inlineHelpText>POS Activation Method</inlineHelpText>
    <label>Activation Method</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Request_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Light up</fullName>
            </value>
            <value>
                <fullName>Test order</fullName>
            </value>
            <value>
                <fullName>Test order and call</fullName>
            </value>
            <value>
                <fullName>Demo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>