sfdx-source/force-app/main/default/objects/Account/fields/Activation_Status__c.field-meta.xml
<CustomField>
    <fullName>Activation_Status__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-566: The activation status of the store.</description>
    <inlineHelpText>Represents the activation status of the store</inlineHelpText>
    <label>Activation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inactive</fullName>
                <default>true</default>
                <label>Inactive</label>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Deactivated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>