sfdx-source/force-app/main/default/objects/Account/fields/Alcohol_Addendum_Signed__c.field-meta.xml
<CustomField>
    <fullName>Alcohol_Addendum_Signed__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>LEM-1450: This field represents whether the  Alcohol Addendum is signed or not</description>
    <inlineHelpText>This field represents whether the Alcohol Addendum is signed or not</inlineHelpText>
    <label>Alcohol Addendum Signed</label>
    <type>Checkbox</type>
</CustomField>