sfdx-source/force-app/main/default/objects/Account/fields/Alcohol_Product_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Alcohol_Product_Eligibility__c</fullName>
    <description>LEM-3434: This field represents the Alcohol product eligibility for a store.</description>
    <label>Alcohol Product Eligibility</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Pickup</fullName>
            </value>
            <value>
                <fullName>Self-Delivery</fullName>
            </value>
            <value>
                <fullName>Not Eligible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>