sfdx-source/force-app/main/default/objects/Account/fields/Alternative_Store_Name__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Store_Name__c</fullName>
    <description>LEM-5025: This represents the alternative name of the store account.</description>
    <label>Alternative Store Name (Mx Portal)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>