sfdx-source/force-app/main/default/objects/Account/fields/AOR_Distance__c.field-meta.xml
<CustomField>
    <fullName>AOR_Distance__c</fullName>
    <description>LEM-3215: Signifies AOR distance (in meters) for this Store in MINT.</description>
    <label>AOR Distance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>