sfdx-source/force-app/main/default/objects/Account/fields/AOR_Enabled__c.field-meta.xml
<CustomField>
    <fullName>AOR_Enabled__c</fullName>
    <description>LEM-3215: Signifies whether Mx is enabled for AOR.</description>
    <label>AOR Enabled</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>