sfdx-source/force-app/main/default/objects/Account/fields/Are_All_Franchise_Accounts_Processed__c.field-meta.xml
<CustomField>
    <fullName>Are_All_Franchise_Accounts_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-10617: It indicates whether Payment Method switched on all the associated franchise Accounts.</description>
    <label>Are All Franchise Accounts Processed?</label>
    <type>Checkbox</type>
</CustomField>