sfdx-source/force-app/main/default/objects/Account/fields/Australian_Business_Number__c.field-meta.xml
<CustomField>
    <fullName>Australian_Business_Number__c</fullName>
    <description>LEM-14886: used for Australian invoices for AUS Mx.</description>
    <label>Australian Business Number</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>