sfdx-source/force-app/main/default/objects/Account/fields/Backend_Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Backend_Parent_Account__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-24069: It is used to have the lookup to the Account with the filter criteria as RecordType.Name = ‘Business&apos; AND Type = &apos;Corporate’ .This filed will be referred in the flow.</description>
    <label>Backend Parent Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Record_Type_Name__c</field>
            <operation>equals</operation>
            <value>Business</value>
        </filterItems>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Corporate</value>
        </filterItems>
        <filterItems>
            <field>Account.Segment__c</field>
            <operation>equals</operation>
            <value>SMB</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Backend Parent Account)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>