sfdx-source/force-app/main/default/objects/Account/fields/Barcode_Receipt_Required__c.field-meta.xml
<CustomField>
    <fullName>Barcode_Receipt_Required__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-1048: Indicates whether barcode receipt is required.</description>
    <label>Barcode Receipt Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>