sfdx-source/force-app/main/default/objects/Account/fields/BGID_for_Account_Ownership__c.field-meta.xml
<CustomField>
    <fullName>BGID_for_Account_Ownership__c</fullName>
    <description>Field is used for CRMA Walk. LEM-25587</description>
    <label>BGID for Account Ownership</label>
    <length>50</length>
    <type>Text</type>
</CustomField>