sfdx-source/force-app/main/default/objects/Account/fields/Billing_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Billing_Country_Code__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>LEM-24604: It stores Billing Account&apos;s country code.Created to utlize in Account&apos;s list view.</description>
    <formula>TEXT(BillingCountryCode)</formula>
    <label>Billing Country Code</label>
    <type>Text</type>
</CustomField>