sfdx-source/force-app/main/default/objects/Account/fields/Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>Brand_Name__c</fullName>
    <description>LEM-16028: Creating Relationship between Opportunity and Store Account</description>
    <formula>HYPERLINK(&apos;/&apos; + Brand__r.Id, Brand__r.Name, &apos;_self&apos;)</formula>
    <label>Brand Name</label>
    <type>Text</type>
</CustomField>