sfdx-source/force-app/main/default/objects/Account/fields/Bulk_Corporate_Onboarding_Request__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Corporate_Onboarding_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-8466 - Connects Store Accounts to the Bulk Corporate Onboarding Request (Process_Flow_Request__c) from which they originated</description>
    <label>Bulk Corporate Onboarding Request</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only Store Accounts can be affiliated to Bulk Corporate Onboarding Requests.</errorMessage>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Store</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Process_Flow_Request__c</referenceTo>
    <relationshipLabel>Stores</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>