sfdx-source/force-app/main/default/objects/Account/fields/Change_of_Ownership_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Change_of_Ownership_Effective_Date__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-1048: Indicates the date when change of ownership of a store is targeted to become effective.</description>
    <inlineHelpText>Signifies the date when change of ownership of a store is targeted to become effective</inlineHelpText>
    <label>Change of Ownership Effective Date</label>
    <type>Date</type>
</CustomField>