sfdx-source/force-app/main/default/objects/Account/fields/Commission_Calculation_Methodology__c.field-meta.xml
<CustomField>
    <fullName>Commission_Calculation_Methodology__c</fullName>
    <description>LEM-3128: Depicts the commission calculation methodology for the Mx.</description>
    <inlineHelpText>Determines the price at which commission is charged to a Merchant during invoicing ,If Direct Deposit select ‘DoorDash Platform Price’.</inlineHelpText>
    <label>Commission Calculation Methodology</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DoorDash Platform Price</fullName>
            </value>
            <value>
                <fullName>Marqeta Swipe Price (in store)</fullName>
            </value>
            <value>
                <fullName>Mx Controlled Inflation</fullName>
            </value>
            <value>
                <fullName>Mx Swipe T-Log Price (in store)</fullName>
            </value>
            <value>
                <fullName>In-Feed</fullName>
                <isActive>false</isActive>
                <label>In-Feed</label>
            </value>
            <value>
                <fullName>Swiped Price</fullName>
                <isActive>false</isActive>
                <label>Swiped Price</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>