sfdx-source/force-app/main/default/objects/Account/fields/Control_of_Price__c.field-meta.xml
<CustomField>
    <fullName>Control_of_Price__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-1048: Indicates price is controlled by DoorDash or Merchant.</description>
    <inlineHelpText>Determines the respective tax strategy for a Merchant to ensure that taxes are calculated correctly</inlineHelpText>
    <label>Control of Price?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DoorDash</fullName>
            </value>
            <value>
                <fullName>Merchant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>