sfdx-source/force-app/main/default/objects/Account/fields/Corporate_Account_Ids__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Account_Ids__c</fullName>
    <description>LEM-8025: It used to Corporate Account Ids related to the Business Accounts</description>
    <label>Corporate Account Ids</label>
    <length>255</length>
    <complianceGroup>GDPR</complianceGroup>
    <type>Text</type>
</CustomField>