sfdx-source/force-app/main/default/objects/Account/fields/Corporate_Owned_Store_Count__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Owned_Store_Count__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <defaultValue>0</defaultValue>
    <description>LEM-363: The count of corporate owned stores related to the business.</description>
    <inlineHelpText>The count of corporate owned stores related to the business.</inlineHelpText>
    <label>Corporate Owned Store Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>