sfdx-source/force-app/main/default/objects/Account/fields/Coverage__c.field-meta.xml
<CustomField>
    <fullName>Coverage__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-1157: This field describes whether the store is in coverage or not.</description>
    <inlineHelpText>Indicates whether the store is in coverage or not. Store not in coverage will not be onboarded to DoorDash platform</inlineHelpText>
    <label>Coverage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Coverage</fullName>
            </value>
            <value>
                <fullName>Not in Coverage</fullName>
            </value>
            <value>
                <fullName>Coverage check failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>