sfdx-source/force-app/main/default/objects/Account/fields/Coverage_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Start_Date__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-1157: This field indicates when the store became in coverage.</description>
    <inlineHelpText>Indicates when the store became in coverage</inlineHelpText>
    <label>Store Became in Coverage</label>
    <type>DateTime</type>
</CustomField>