sfdx-source/force-app/main/default/objects/Account/fields/Creation_Source__c.field-meta.xml
<CustomField>
    <fullName>Creation_Source__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-97,13751: It is used to identify the source of account creation.</description>
    <label>Creation Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Data Loader</fullName>
            </value>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
                <default>true</default>
                <label>Manual</label>
            </value>
            <value>
                <fullName>Marketing Automation</fullName>
            </value>
            <value>
                <fullName>Mx Portal</fullName>
            </value>
            <value>
                <fullName>Selection Intel</fullName>
            </value>
            <value>
                <fullName>SSMO</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>SSOB</fullName>
            </value>
            <value>
                <fullName>Nintex</fullName>
            </value>
            <value>
                <fullName>RESSMO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>