sfdx-source/force-app/main/default/objects/Account/fields/Custom_Delivery_Radius__c.field-meta.xml
<CustomField>
    <fullName>Custom_Delivery_Radius__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-1048: Indicates custom delivery radius for Mx.</description>
    <inlineHelpText>Signifies custom delivery radius for Mx</inlineHelpText>
    <label>Custom Delivery Radius</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>