sfdx-source/force-app/main/default/objects/Account/fields/Data_Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>Data_Verification_Status__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-88: It is used to track status of the account in order for Data Ops to ensure there are no duplicate accounts.</description>
    <label>Data Verification Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unverified</fullName>
                <default>true</default>
                <label>Unverified</label>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Blocked - Flagged For Clean Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>