sfdx-source/force-app/main/default/objects/Account/fields/Deck_Rank__c.field-meta.xml
<CustomField>
    <fullName>Deck_Rank__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-661: This field represents the deck rank of the Enterprise accounts.</description>
    <inlineHelpText>This field represents the deck rank of the associated accounts.</inlineHelpText>
    <label>Deck Rank</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Deck_Rank_Values</valueSetName>
    </valueSet>
</CustomField>