sfdx-source/force-app/main/default/objects/Account/fields/Developer_ID_Backend__c.field-meta.xml
<CustomField>
    <fullName>Developer_ID_Backend__c</fullName>
    <description>LEM-3061: Represents the Drive Developer ID (number only) for the business or channel partner in the backend.</description>
    <label>Developer ID Backend</label>
    <length>40</length>
    <type>Text</type>
</CustomField>