sfdx-source/force-app/main/default/objects/Account/fields/Dining_Format__c.field-meta.xml
<CustomField>
    <fullName>Dining_Format__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13442:It indicates the type of Dining of the SMB Account.</description>
    <inlineHelpText>Indicates the type of Dining of the SMB Account</inlineHelpText>
    <label>Dining Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Casual</fullName>
            </value>
            <value>
                <fullName>Fast Casual</fullName>
            </value>
            <value>
                <fullName>Fine Dining</fullName>
            </value>
            <value>
                <fullName>Ghost</fullName>
            </value>
            <value>
                <fullName>Home Chef</fullName>
            </value>
            <value>
                <fullName>QSR</fullName>
            </value>
            <value>
                <fullName>Virtual Brand</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>