sfdx-source/force-app/main/default/objects/Account/fields/Disallow_PDOA_Override__c.field-meta.xml
<CustomField>
    <fullName>Disallow_PDOA_Override__c</fullName>
    <description>LEM-2800: This field will be used to capture if User wants to override the PDOA date.</description>
    <inlineHelpText>If this field is set to no, the system will set PDOA (and may override what user enters). If this field is set to yes, then PDOA value set by user will remain</inlineHelpText>
    <label>User Sets PDOA Value?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>