sfdx-source/force-app/main/default/objects/Account/fields/DoorDash_Funding__c.field-meta.xml
<CustomField>
    <fullName>DoorDash_Funding__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13442: It indicates the amount of funding DoorDash has committed to the Mx.</description>
    <inlineHelpText>Indicates the amount of funding DoorDash has committed to the Mx</inlineHelpText>
    <label>DoorDash Funding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>