sfdx-source/force-app/main/default/objects/Account/fields/DoorDash_Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>DoorDash_Legal_Entity__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-578 : To store DoorDash legal entity for contract template generation.</description>
    <label>DoorDash Legal Entity</label>
    <length>80</length>
    <type>Text</type>
</CustomField>