sfdx-source/force-app/main/default/objects/Account/fields/DoorDash_Social_Media_Marketing_Feature__c.field-meta.xml
<CustomField>
    <fullName>DoorDash_Social_Media_Marketing_Feature__c</fullName>
    <description>LEM-14107: It is used to store the engagement preference for social media and marketing.</description>
    <complianceGroup>GDPR</complianceGroup>
    <label>DoorDash Social Media/Marketing Feature</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Do Not Contact - Sensitive Relationship</fullName>
            </value>
            <value>
                <fullName>High/Include - Very Interested</fullName>
            </value>
            <value>
                <fullName>Low/Exclude - Not Interested</fullName>
            </value>
            <value>
                <fullName>Medium/Potential - Could be Interested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>