sfdx-source/force-app/main/default/objects/Account/fields/Drive_Nintex_Id__c.field-meta.xml
<CustomField>
    <fullName>Drive_Nintex_Id__c</fullName>
    <description>LEM-2567: This field stores the workflow instance and also serves as identification of the source that created the account.</description>
    <label>Drive Nintex Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>